[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Spawner.gd" type="Script" id=1]
[ext_resource path="res://SpaceElements/Characters/Enemies/Cylon/CylonTimer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bonus/EnergyCharge/EnergyChargeTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpaceElements/Characters/Enemies/Asteroid/AsteroidTimer.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 59.4641, -0.943874, -59.4641, 0.943874, 185.714, -72, 0, 0, 0, 0, 1909.14, -72, 0, 0, 0, 0, 1909.14, 1208, 0, 0, 0, 0, 185.714, 1208, 0, 0, 0, 0, 185.714, -72 )
}

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnerPath" type="Path2D" parent="."]
position = Vector2( -392, -120 )
scale = Vector2( 1.07692, 1 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="SpawnerPath"]
position = Vector2( 185.714, -72 )
rotation = 0.0281392

[node name="AsteroidTimer" parent="." instance=ExtResource( 4 )]

[node name="EnergyChargeTimer" parent="." instance=ExtResource( 3 )]
wait_time = 15.0

[node name="CylonTimer" parent="." instance=ExtResource( 2 )]
autostart = false

[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="EnergyChargeTimer" to="." method="_on_EnergyChargeTimer_timeout"]
[connection signal="timeout" from="CylonTimer" to="." method="_on_CylonTimer_timeout"]
